namespace.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: final-project
  labels:
    app: final-project
